--- a/src/assets/styles/main/abstracts/_config.scss
+++ b/src/assets/styles/main/abstracts/_config.scss
@@ -28,14 +28,9 @@ $fw-bold: 700;
 $fw-extra-bold: 800;
 $fw-ultra-bold: 900;
 
-// Colors
-$white: #ffffff;
-$black: #4a4a4a;
-$gray: #797e83;
-$orange: #EC7024;
-$blue: #2ba5e0;
+@import 'colors';
 
-$main-color: $orange;
+$main-color: $black;
 
 // Transitions
 $trns-duration: .2s;
