--- a/src/assets/styles/main/abstracts/_colors.scss
+++ b/src/assets/styles/main/abstracts/_colors.scss
@@ -1,9 +1,10 @@
-$red: rgba(230,34,73,1);
-$black: rgba(36,43,53,1);
-$white: rgba(240,243,245,1);
-$glitter: rgba(232,237,240,1);
-$light-gray: rgba(115,133,159,0.16);
-$cadet-gray: rgba(144,164,179,1);
-$cool-gray: rgba(132,147,168,1);
-$onyx: rgba(12,16,21,0.60);
-$green: rgba(62,206,111,1);
+$red:         #E62249;
+$black:       #242B35;
+$white:       #FFFFFF;
+$snow:        #F0F3F5;
+$glitter:     #e8edf0;
+$cadet-gray:  #90A4B3;
+$cool-gray:   #8493A8;
+$green:       #3ECE6F;
+$onyx:        rgba(12,16,21,0.60);
+$light-gray:  rgba(115,133,159,0.16);
