adding async font situation

--- a/src/assets/styles/main/abstracts/_config.scss
+++ b/src/assets/styles/main/abstracts/_config.scss
@@ -5,6 +5,8 @@
 // Typography
 $system-fonts: -apple-system, system-ui, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen-Sans, Ubuntu, Cantarell, 'Helvetica Neue', sans-serif;
 $font-family--primary: 'Open Sans', sans-serif;
+$source: 'Source Sans Pro', sans-serif;
+$lato: 'Lato', sans-serif;
 
 // Text
 $base-font-size: 1em;
