--- a/src/pug/home/menu.pug
+++ b/src/pug/home/menu.pug
@@ -18,6 +18,6 @@
         li: a(href="#"): +svg('reddit')
         li: a(href="#"): +svg('medium')
 
-      a(href="#" title="Launch Rocket Chat")
+      a(href="#" title="Launch Rocket Chat" css-module="home.menu.cta")
         +svg('rocket')
         span Launch Rocket Chat
