--- a/src/assets/styles/main/home/menu.scss
+++ b/src/assets/styles/main/home/menu.scss
@@ -50,3 +50,21 @@
     margin-left: 24px;
   }
 }
+
+.cta {
+  background: $red;
+  color: $white;
+  font-weight: 900;
+  font-family: $lato;
+  font-size: 13px;
+  line-height: 16px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 3px;
+  padding: 12px 18px;
+
+  span {
+    margin-left: 9px;
+  }
+}
