--- a/src/assets/styles/main/base/general.scss
+++ b/src/assets/styles/main/base/general.scss
@@ -1,39 +1,42 @@
 @import "../abstracts/index.scss";
 
-html {
-  box-sizing: border-box;
-}
-
-* {
-  &::before, &::after {
-    box-sizing: inherit;
+:global {
+  html {
+    box-sizing: border-box;
   }
-}
 
-::selection {
-  background: $main-color;
-  color: $white;
-}
+  * {
+    box-sizing: inherit;
+    &::before, &::after {
+      box-sizing: inherit;
+    }
+  }
 
-body {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-}
+  ::selection {
+    background: $main-color;
+    color: $white;
+  }
 
-img {
-  max-width: 100%;
-}
+  body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+  }
 
-.is-hidden {
-  position: absolute;
-  height: 0;
-  width: 0;
-  visibility: hidden;
-}
+  img {
+    max-width: 100%;
+  }
 
-svg[class^="icon-"] {
-  fill: currentColor;
-  stroke: none;
-  max-width: 100%;
+  .is-hidden {
+    position: absolute;
+    height: 0;
+    width: 0;
+    visibility: hidden;
+  }
+
+  svg[class^="icon-"] {
+    fill: currentColor;
+    stroke: none;
+    max-width: 100%;
+  }
 }
