tweaking the newsletter css

--- a/src/assets/styles/main/abstracts/_mixins.scss
+++ b/src/assets/styles/main/abstracts/_mixins.scss
@@ -3,3 +3,16 @@
 
 // Bringing Manila from its own bower repo
 @import "manila-mixins";
+
+@mixin reset-input {
+  appearance: none;
+  border: none;
+  border-radius: 0;
+  background: none;
+  margin: 0;
+  padding: 0;
+  font: inherit;
+  line-height: inherit;
+  color: inherit;
+  outline: none;
+}
