--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -1,13 +1,13 @@
 section(css-module="home.hero.background")
   .container
-    +h('div', 'home.hero.row')
-      +h('div', 'home.hero.large')
+    div(css-module="home.hero.row")
+      div(css-module="home.hero.large")
         +svg('rndr')
         h6 OTOY's render token for
         h1 Distributed GPU rendering in the blockchain
 
-      +h('div', 'home.hero.large')
-        +h('ul', 'home.hero.menu')
+      div(css-module="home.hero.large")
+        ul(css-module="home.hero.menu")
           li: a(href="#") Whitepaper
           li: a(href="#") English
           li: a(href="#") 简体中文
