--- a/src/pug/home/menu.pug
+++ b/src/pug/home/menu.pug
@@ -1,5 +1,5 @@
-+h('header', 'home.menu.header')
-  +h('a', 'home.menu.logo')(href="/" title="Otoy")
+header(css-module="home.menu.header")
+  a(css-module="home.menu.logo" href="/" title="Otoy")
     +svg('logo')
   .container
     div(css-module='home.menu.row')
