newest favicons wow

--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -6,7 +6,7 @@ section(css-module="home.hero.background")
         h6 OTOY's render token for
         h1 Distributed GPU rendering in the blockchain
 
-      div(css-module="home.hero.large")
+      div(css-module="home.hero.small")
         ul(css-module="home.hero.menu")
           li: a(href="#") Whitepaper
           li: a(href="#") English
