--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -16,3 +16,4 @@ section(css-module="home.hero.background")
           li: a(href="#") Русский
 
         include newsletter
+        include project-status
