--- a/src/pug/home/project-status.pug
+++ b/src/pug/home/project-status.pug
@@ -1,2 +1,3 @@
-div(css-module='')
-  h6 Project Status
+div(css-module='home.project-status.wrapper')
+  h6(css-module='home.project-status.title') Project Status
+  +svg('progress')
