--- a/src/assets/styles/main/home/menu.scss
+++ b/src/assets/styles/main/home/menu.scss
@@ -1,11 +1,8 @@
 @import '../abstracts/index';
 
 .header {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
   padding-top: 42px;
+  padding-bottom: 60px;
 }
 
 .logo {
