--- a/src/pug/home/hero.pug
+++ b/src/pug/home/hero.pug
@@ -1,4 +1,5 @@
 section(css-module="home.hero.background")
+  include menu
   .container
     div(css-module="home.hero.row")
       div(css-module="home.hero.large")
