--- a/src/pug/home/intro.pug
+++ b/src/pug/home/intro.pug
@@ -2,15 +2,17 @@
   div(css-module='home.intro.container')
     div(css-module='home.intro.row')
       div(css-module='home.intro.small-col')
-        h6 Introduction
-        h4 Our vision is to democratize computing rendering power
-        +img('gpu.png')
+        div(css-module='home.intro.intro')
+          h6 Introduction
+          h4 Our vision is to democratize computing rendering power
+          p This Render token system creates a much more efficient, powerful, and widely-scalable rendering network.
+        +img('gpu.png', 'home.intro.gpu')
       div(css-module='home.intro.large-col')
-        button
+        button(css-module='home.intro.video')
           +img('poster.jpg')
           +svg('play')
 
-        div
+        div(css-module='home.intro.copy')
           p RNDR will be the first network to transform the power of GPU compute into a decentralized economy of connected 3D assets.
           p OTOY’s vision is to distribute the framework of this existing rendering service through a token-based system built on the Ethereum blockchain.
           p It will connect users looking to perform render jobs with people who have idle GPUs to process the renders. Users would send Render Tokens to the individual performing the render work and OTOY would receive a small percentage of Render Tokens for facilitating the transaction and running the render network.
