--- a/src/assets/styles/main/layout/container.scss
+++ b/src/assets/styles/main/layout/container.scss
@@ -8,4 +8,12 @@
     margin: 0 auto;
     padding: 0 ($column-gutter / 2);
   }
+
+  .container-1060 {
+    position: relative;
+    width: 95%;
+    max-width: 1060px;
+    margin: 0 auto;
+    padding: 0 ($column-gutter / 2);
+  }
 }
