--- a/src/assets/styles/main/home/how.scss
+++ b/src/assets/styles/main/home/how.scss
@@ -2,4 +2,98 @@
 
 .wrapper {
   background: $snow;
+  padding-top: 115px;
+}
+
+.intro {
+  max-width: 430px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 67px;
+  text-align: center;
+
+  h6 {
+    font-size: 19px;
+    line-height: 23px;
+    font-family: $lato;
+    font-weight: 700;
+    margin-bottom: 33px;
+  }
+
+  h4 {
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 45px;
+    margin-bottom: 31px;
+  }
+
+  p {
+    font-size: 18px;
+    line-height: 28px;
+    font-weight: 600;
+  }
+}
+
+.infographic {
+  margin-bottom: 66px;
+
+  svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.copy {
+  font-size: 15px;
+  line-height: 28px;
+  max-width: 580px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 84px;
+  text-align: center;
+}
+
+.row {
+  display: flex;
+}
+
+.sectors {
+  margin-right: 80px;
+  text-align: right;
+  h5 {
+    width: 180px;
+    font-size: 19px;
+    line-height: 30px;
+    font-weight: 700;
+  }
+}
+
+.icons {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.sector {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 80px;
+  margin-bottom: 43px;
+}
+
+.sector-icon {
+  margin-right: 12px;
+
+  svg {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+}
+
+.sector-name {
+  font-family: $lato;
+  font-size: 13px;
+  line-height: 27px;
 }
