team section situation markup done

--- a/src/pug/home/about.pug
+++ b/src/pug/home/about.pug
@@ -1,4 +1,4 @@
-#about(css-module='home.about.wrapper')
+section#about(css-module='home.about.wrapper')
   .container
     div(css-module='home.about.title')
       h3 About
