--- a/src/pug/home/how.pug
+++ b/src/pug/home/how.pug
@@ -5,7 +5,7 @@ mixin sector({icon, name})
     div(css-module='home.how.sector-name')
       p= name
 
-#how(css-module='home.how.wrapper')
+section#how(css-module='home.how.wrapper')
   .container-1060
     div(css-module='home.how.intro')
       h6 How It Works
