--- a/src/pug/home/intro.pug
+++ b/src/pug/home/intro.pug
@@ -1,4 +1,4 @@
-#intro(css-module='home.intro.wrapper')
+section#intro(css-module='home.intro.wrapper')
   div(css-module='home.intro.container')
     div(css-module='home.intro.row')
       div(css-module='home.intro.small-col')
