--- a/src/pug/home/problem.pug
+++ b/src/pug/home/problem.pug
@@ -8,7 +8,7 @@ mixin problem({icon, title, copy, img})
     h3(css-module='home.problem.problem-title')= title
     p(css-module='home.problem.copy')= copy
 
-#problem(css-module='home.problem.wrapper')
+section#problem(css-module='home.problem.wrapper')
   .container-1060
     h6(css-module='home.problem.title') The Problem
     div(css-module='home.problem.intro')
