more manageable team situation

--- a/src/pug/home/team.pug
+++ b/src/pug/home/team.pug
@@ -1,152 +1,11 @@
-mixin vip({img, name, title, extra, supreme})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    h5= title
-    h6= extra
-
-mixin advisor({img, name, title})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    p= title
-
-mixin core({img, name, title})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    p= title
-
-mixin commie({img, name, title})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar-round')
-    h4= name
-    p= title
-
 section#team
   .container-1060
-    div
-      h6 Team
-      h4 Meet the founders & our advisors
-    //- CoFounders
-    div
-      +vip({
-        img: 'jules.png',
-        name: 'Jules Urbach',
-        title: 'CEO',
-        extra: 'Co-Founder @ OTOY',
-        supreme: true
-      })
-      +vip({
-        img: 'alissa.png',
-        name: 'Alissa Grainer',
-        title: 'President',
-        extra: 'Co-Founder @ OTOY',
-        supreme: true
-      })
-    //- Advisors
-    div
-      +advisor({
-        img: 'ari.png',
-        name: 'Ari Emanuel',
-        title: 'Co-Founder & Co-CEO @ WME IMG'
-      })
-      +advisor({
-        name: 'J.J. Abrams',
-        title: 'Chairman & CEO @ Bad Robot Productions'
-      })
-      +advisor({
-        img: 'brendan.png',
-        name: 'Brendan Eich',
-        title: 'Founder & CEO @ Brave Software & BAT'
-      })
-      +advisor({
-        img: 'george.png',
-        name: 'George Gilder',
-        title: 'Founder & Partner @ Gilder Technology Fund'
-      })
-      +advisor({
-        name: 'Jennifer Zhu Scott',
-        title: 'Principal @ Radian & Council Member @ WEF'
-      })
-      +advisor({
-        name: 'Demian Brener',
-        title: 'Co-Founder & CEO @ Zeppelin Solutions'
-      })
-      +advisor({
-        name: 'Manuel Araoz',
-        title: 'CTO @ Zeppelin Solutions & Partner @ INB'
-      })
-      +advisor({
-        name: 'Ari Meilich',
-        title: 'CEO & Project Lead @ Decentraland'
-      })
+    h6 Team
+    h4 Meet the founders & our advisors
+    include team/founders
+    include team/advisors
 
     h4 And the core team.
-    div
-      +core({
-        img: 'kalin.png',
-        name: 'Kaling Stoyanchev',
-        title: 'Project Lead'
-      })
-      +core({
-        img: 'charlie.png',
-        name: 'Charlie Wallace',
-        title: 'Chief Science Officer'
-      })
-      +core({
-        name: 'Akram Abdou',
-        title: 'Project Manager'
-      })
-      +core({
-        img: 'adam.png',
-        name: 'Adam Bodnar',
-        title: 'Developer'
-      })
-      +core({
-        img: 'kevin.png',
-        name: 'Kevin Bockman',
-        title: 'Developer'
-      })
-      +core({
-        name: 'Time Maclean',
-        title: 'Developer'
-      })
-      +core({
-        name: 'Daniel Torres',
-        title: 'Developer'
-      })
+    include team/core
     h4 People handling community outrearch.
-    div
-      +commie({
-        name: 'Patrick Frigg',
-        title: 'Moderator'
-      })
-      +commie({
-        name: 'Janne Saviranta',
-        title: 'Moderator'
-      })
-      +commie({
-        name: 'Tony Morella',
-        title: 'Moderator'
-      })
-      +commie({
-        name: 'Julio Alvarez',
-        title: 'Moderator'
-      })
-      +commie({
-        name: 'Pablo Wilner',
-        title: 'Moderator'
-      })
+    include team/commies
