--- a/src/pug/home/team/founders.pug
+++ b/src/pug/home/team/founders.pug
@@ -1,14 +1,15 @@
 mixin vip({img, name, title, extra, supreme})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    h5= title
-    h6= extra
+  div(css-module='team.founders.vip')
+    button
+      if img
+        +img(img)
+      else
+        +svg('avatar')
+      h4= name
+      h5= title
+      h6= extra
 
-div
+div(css-module='team.founders.row')
   +vip({
     img: 'jules.png',
     name: 'Jules Urbach',
