--- a/src/pug/home/team/advisors.pug
+++ b/src/pug/home/team/advisors.pug
@@ -1,13 +1,14 @@
 mixin advisor({img, name, title})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    p= title
+  div(css-module='team.advisors.advisor')
+    button
+      if img
+        +img(img)
+      else
+        +svg('avatar')
+      h4= name
+      p= title
 
-div
+div(css-module='team.advisors.row')
   +advisor({
     img: 'ari.png',
     name: 'Ari Emanuel',
