--- a/src/assets/styles/main/team/core.scss
+++ b/src/assets/styles/main/team/core.scss
@@ -1,16 +1,22 @@
 @import '../abstracts/index';
 
+.container {
+  max-width: 830px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .row {
   display: flex;
   justify-content: center;
   flex-wrap: wrap;
-  margin: 0 -57px 27px;
+  margin: 0 -15px 27px;
 }
 
-.advisor {
-  flex-basis: 275px;
-  max-width: 275px;
-  padding: 0 57px;
+.core {
+  flex-basis: 190px;
+  max-width: 190px;
+  padding: 0 15px;
   margin-bottom: 55px;
 
   button {
@@ -19,8 +25,8 @@
 
   img, svg {
     display: block;
-    width: 120px;
-    height: 120px;
+    width: 80px;
+    height: 80px;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 27px;
