--- a/src/pug/home/team/core.pug
+++ b/src/pug/home/team/core.pug
@@ -1,42 +1,44 @@
 mixin core({img, name, title})
-  div
-    if img
-      +img(img)
-    else
-      +svg('avatar')
-    h4= name
-    p= title
+  div(css-module='team.core.core')
+    button
+      if img
+        +img(img)
+      else
+        +svg('avatar')
+      h4= name
+      p= title
 
-div
-  +core({
-    img: 'kalin.png',
-    name: 'Kaling Stoyanchev',
-    title: 'Project Lead'
-  })
-  +core({
-    img: 'charlie.png',
-    name: 'Charlie Wallace',
-    title: 'Chief Science Officer'
-  })
-  +core({
-    name: 'Akram Abdou',
-    title: 'Project Manager'
-  })
-  +core({
-    img: 'adam.png',
-    name: 'Adam Bodnar',
-    title: 'Developer'
-  })
-  +core({
-    img: 'kevin.png',
-    name: 'Kevin Bockman',
-    title: 'Developer'
-  })
-  +core({
-    name: 'Time Maclean',
-    title: 'Developer'
-  })
-  +core({
-    name: 'Daniel Torres',
-    title: 'Developer'
-  })
+div(css-module='team.core.container')
+  div(css-module='team.core.row')
+    +core({
+      img: 'kalin.png',
+      name: 'Kaling Stoyanchev',
+      title: 'Project Lead'
+    })
+    +core({
+      img: 'charlie.png',
+      name: 'Charlie Wallace',
+      title: 'Chief Science Officer'
+    })
+    +core({
+      name: 'Akram Abdou',
+      title: 'Project Manager'
+    })
+    +core({
+      img: 'adam.png',
+      name: 'Adam Bodnar',
+      title: 'Developer'
+    })
+    +core({
+      img: 'kevin.png',
+      name: 'Kevin Bockman',
+      title: 'Developer'
+    })
+    +core({
+      name: 'Time Maclean',
+      title: 'Developer'
+    })
+    +core({
+      name: 'Daniel Torres',
+      title: 'Developer'
+    })
