technical table done

--- a/src/pug/home/sale.pug
+++ b/src/pug/home/sale.pug
@@ -1,4 +1,4 @@
-section#sale
+section#sale(css-module='home.sale.wrapper')
   .container-940
     include sale/technicals
     include sale/distribution
