--- a/src/pug/home/sale/distribution.pug
+++ b/src/pug/home/sale/distribution.pug
@@ -1,8 +1,9 @@
-div
-  div
-    h4 Token Distribution & Use of Funds
-  div
-    div
-      +svg('pie-1-full')
-    div
-      +svg('pie-2-full')
+div(css-module='sale.distribution.distribution')
+  div(css-module='sale.technicals.small-col')
+    h4(css-module='sale.technicals.render') Token Distribution & Use of Funds
+  div(css-module='sale.technicals.large-col')
+    div(css-module='sale.distribution.row')
+      div(css-module='sale.distribution.hafu')
+        +svg('pie-1-full')
+      div(css-module='sale.distribution.hafu')
+        +svg('pie-2-full')
