roadmap basic css done

--- a/src/pug/home/how.pug
+++ b/src/pug/home/how.pug
@@ -51,4 +51,4 @@ section#how(css-module='home.how.wrapper')
           name: 'Virtual Reality'
         })
 
-  +img('close.png')
+  +img('close.png', 'home.roadmap.gears')
