--- a/src/assets/styles/main/abstracts/_colors.scss
+++ b/src/assets/styles/main/abstracts/_colors.scss
@@ -6,5 +6,6 @@ $glitter:     #e8edf0;
 $cadet-gray:  #90A4B3;
 $cool-gray:   #8493A8;
 $green:       #3ECE6F;
+$blue:        #226BE6;
 $onyx:        rgba(12,16,21,0.60);
 $light-gray:  rgba(115,133,159,0.16);
