--- a/src/pug/home/roadmap/three.pug
+++ b/src/pug/home/roadmap/three.pug
@@ -1,15 +1,21 @@
-div
-  span Q3
-  div
-    span 2018
+div(css-module='roadmap.box.box')
+  span(css-module='roadmap.box.q')
+    | Q3
+  div(css-module='roadmap.box.header')
+    span(css-module='roadmap.box.year')
+      | 2018
     +svg('dot')
-    span Q3/4
-  h6 Render Phase III
-  h5 Launch Peer-to-Peer Network
+    span(css-module='roadmap.box.quarter')
+      | Q3/4
+  h6(css-module='roadmap.box.phase')
+    | Render Phase III
+  h5(css-module='roadmap.box.title')
+    | Launch Peer-to-Peer Network
 
-  div
+  div(css-module='roadmap.box.copy')
     p End of beta period. Launch of the p2p exchange and unlock of the full capability of the Render token network. Streamline back-end processes and automation process of the rendering-streaming through smart contracts and blockchain technology.
 
-  button
-    span Read more
+  div(css-module='roadmap.box.fade')
+  button(css-module='roadmap.box.button')
+    span Read More
     +svg('caret-down')
