--- a/src/assets/styles/main/home/roadmap.scss
+++ b/src/assets/styles/main/home/roadmap.scss
@@ -50,3 +50,17 @@
   display: block;
   width: 100%;
 }
+
+.gears-stuck {
+  composes: gears;
+  margin-top: -150px;
+}
+
+.two {
+  margin-top: 40px;
+  margin-bottom: 78px;
+}
+
+.three {
+  margin-top: 195px;
+}
