faqs situation done

--- a/src/pug/home/faqs.pug
+++ b/src/pug/home/faqs.pug
@@ -1,5 +1,5 @@
-section#faqs
+section#faqs(css-module='home.faqs.wrapper')
   .container-1060
-    a(href='faqs')
+    a(href='faqs' title='Visit the FAQs page' css-module='home.faqs.link')
       span Maybe we’ve already answered your question. Visit our FAQs
-      +svg('arrow-right')
+      +svg('arrow-faqs')
