--- a/src/assets/styles/main/home/hero.scss
+++ b/src/assets/styles/main/home/hero.scss
@@ -1,6 +1,6 @@
 @import '../abstracts/_index';
 
-.background {
+.wrapper {
   padding-bottom: 72px;
   @include std-background;
   background-position: bottom;
