--- a/src/assets/styles/main/home/sticky-navigation.scss
+++ b/src/assets/styles/main/home/sticky-navigation.scss
@@ -3,6 +3,7 @@
 .wrapper {
   background: $black;
   color: $cool-gray;
+  transition: .4s;
 }
 
 .sticky {
@@ -11,6 +12,14 @@
   left: 0;
   width: 100%;
   z-index: 10;
+}
+
+.pinned {
+  transform: translateY(0);
+}
+
+.unpinned {
+  transform: translateY(-100%);
 }
 
 .navigation {
